# libprofit

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.travis/: after_success.sh  before_install.sh  install.sh
CMakeModules/: FindLibR.cmake
cmake/: FindFFTW.cmake  GenerateOpenCLHeader.cmake  profit-config.cmake.in
docs/: .gitignore  Doxyfile  Makefile  api.rst  bindings.rst  changelog.rst  conf.py  convolution.rst  coordinates.rst  flux_capturing.rst  getting.rst  index.rst  new_profile.rst  profiles.rst  requirements.txt  structure.rst  usage.rst
docs/api/: convolvers.rst  exceptions.rst  imaging.rst  library.rst  model.rst  profiles.rst
docs/example/: example.c  example.cpp  example.h
docs/images/: coordinates.dia
include/: analytic.h  convolve.h  ferrer.h  moffat.h  profit.h  psf.h  radial.h  sersic.h  sersic_like.h  sky.h  utils.h  version.h
include/profit/: common.h  convolve.h  convolver_impl.h  exceptions.h  fft_impl.h  image.h  model.h  null.h  omp_utils.h  psf.h  radial.h  sky.h  utils.h
profit/: brokenexponential.h  common.h  config.h.in  convolve.h  convolver_impl.h  coresersic.h  dot_product.h  exceptions.h  ferrer.h  fft.h  fft_impl.h  fits_utils.h  image.h  king.h  library.h  model.h  moffat.h  omp_utils.h  opencl.h  opencl_impl.h  profile.h  profit.h  psf.h  radial.h  sersic.h  sky.h  utils.h
profit/cl/: sersic-double.cl  sersic-float.cl
src/: .gitignore  Makefile  analytic.cpp  brokenexponential.cpp  convolve.c  convolve.cpp  coresersic.cpp  exceptions.cpp  ferrer.cpp  fft.cpp  fits_utils.cpp  image.cpp  king.cpp  library.cpp  model.cpp  moffat.cpp  opencl.cpp  profile.cpp  profit-cli.c  profit-cli.cpp  profit.c  profit.cpp  psf.c  psf.cpp  radial.cpp  sersic-double.cl  sersic-float.cl  sersic.c  sersic.cpp  sersic_like.cpp  sky.cpp  utils.c  utils.cpp
src/apps/: CMakeLists.txt  fits_utils.cpp  profit-cli.cpp
src/cl/: brokenexponential-double.cl  brokenexponential-float.cl  convolve-double.cl  convolve-float.cl
src/profit/: CMakeLists.txt  fits_utils.h  image.h  model.cpp  model.h  opencl.cpp  radial.cpp
src/profit/tests/: CMakeLists.txt  common_test_setup.h  test_convolver.h  test_image.h  test_library.h  test_model.h  test_opencl.h  test_radial.h  test_sersic.h  test_sky.h  test_utils.h
test/: .gitignore  Makefile  main.c
tests/: CMakeLists.txt  common_test_setup.h  test_convolver.h  test_fft.h  test_image.h  test_library.h  test_model.h  test_opencl.h  test_profile.h  test_psf.h  test_radial.h  test_sersic.h  test_sky.h  test_utils.h
tools/: multibuild.py
